--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hungry's Corner Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="menu.css">
@@ -18,98 +18,83 @@
             <span class="cart-item-count"></span>
         </div>
     </div>
+
     <section class="shop">
-        <h1 class="section-title">Our Mneu</h1>
+        <h1 class="section-title">Our Menu</h1>
         <div class="product-content">
+            <!-- Product items -->
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/idli.jpg" alt="Idli">
-                </div>
+                <div class="img-box"><img src="assets/idli.jpg" alt="Idli" /></div>
                 <h2 class="product-title">Idli</h2>
-                <div class="price-and-cart">
-                    <span class="price">$50</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$50</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/dosa.jpg" alt="Dosa">
-                </div>
+                <div class="img-box"><img src="assets/dosa.jpg" alt="Dosa" /></div>
                 <h2 class="product-title">Dosa</h2>
-                <div class="price-and-cart">
-                    <span class="price">$70</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$70</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/vada.jpg" alt="Vada">
-                </div>
+                <div class="img-box"><img src="assets/vada.jpg" alt="Vada" /></div>
                 <h2 class="product-title">Vada</h2>
-                <div class="price-and-cart">
-                    <span class="price">$50</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$50</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/vada-pav.jpg" alt="vada-pav">
-                </div>
+                <div class="img-box"><img src="assets/vada-pav.jpg" alt="vada-pav" /></div>
                 <h2 class="product-title">Vada Pav</h2>
-                <div class="price-and-cart">
-                    <span class="price">$20</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$20</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/coffee.avif" alt="coffee">
-                </div>
+                <div class="img-box"><img src="assets/coffee.avif" alt="coffee" /></div>
                 <h2 class="product-title">Coffee</h2>
-                <div class="price-and-cart">
-                    <span class="price">$30</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$30</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/milkshake.avif" alt="milkshake">
-                </div>
+                <div class="img-box"><img src="assets/milkshake.avif" alt="milkshake" /></div>
                 <h2 class="product-title">Milkshake</h2>
-                <div class="price-and-cart">
-                    <span class="price">$50</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$50</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/fries.avif" alt="fries">
-                </div>
+                <div class="img-box"><img src="assets/fries.avif" alt="fries" /></div>
                 <h2 class="product-title">Fries</h2>
-                <div class="price-and-cart">
-                    <span class="price">$70</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$70</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
 
             <div class="product-box">
-                <div class="img-box">
-                    <img src="assets/burger.avif" alt="Burger">
-                </div>
+                <div class="img-box"><img src="assets/burger.avif" alt="Burger" /></div>
                 <h2 class="product-title">Burger</h2>
-                <div class="price-and-cart">
-                    <span class="price">$100</span>
-                    <i class="ri-shopping-bag-line add-cart"></i>
+                <div class="price-and-cart"><span class="price">$100</span><i class="ri-shopping-bag-line add-cart"></i>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Cart Sidebar -->
+    <div class="cart-sidebar" id="cart">
+        <div class="cart-header">
+            <h2>Your Cart</h2>
+            <i class="ri-close-line" id="close-cart"></i>
+        </div>
+        <div class="cart-items"></div>
+        <div class="cart-footer">
+            <h3>Total: $<span id="cart-total">0</span></h3>
+            <button class="checkout-btn">Checkout</button>
+        </div>
+    </div>
+
+    <script src="menu.js"></script>
 </body>
 
 </html>
