Updated index.html with Menu link and design improvements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <div class="name">Hungry's Corner</div>
             <ul class="elements">
-                <li>Menu</li>
+                <li><a href="menu.html">Menu</a></li>
                 <li>Account</li>
                 <li>Help & Support</li>
                 <li>About & Contact</li>
