--- a/menu.html
+++ b/menu.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Humgrys Corner - Menu</title>
+    <title>Hungry's Corner - Menu</title>
     <link rel="stylesheet" href="menu.css">
 </head>
 
 <body>
     <header>
-        <h1>Humgrys Corner</h1>
+        <h1>Hungry's Corner</h1>
         <span>Menu</span>
     </header>
 
